<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Green Pakistan</string>
    <string name="login">Login</string>
    <string name="login_in_to_continue">Login to continue</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_pass">Forget Password</string>
    <string name="SignUp">SignUp</string>
    <string name="Register">Register</string>

    <string name="splash">SHOPSRUS</string>
    <string name="username">Enter Your Name</string>
    <string name="useremail">Enter Your Email</string>
    <string name="userpassword">Enter Your Password</string>
    <string name="userphonenumber">Enter Your Phone Number</string>
    <string name="location">Select Location</string>
    <string name="CNIC">Enter Your CNIC</string>
    <string name="shopkeeper">ShopKeeper</string>

//profile
    <string name="profile">My Profile</string>
    <string name="profname">Your Name</string>
    <string name="profemail" tools:ignore="DuplicateDefinition">Your Email</string>
    <string name="profpassword" tools:ignore="DuplicateDefinition">Your Password</string>
    <string name="phone">Your Phone Number</string>
    <string name="profession">Your Profession</string>
    <string name="proflocation" tools:ignore="DuplicateDefinition">Your Location</string>
    <string name="detail">Details</string>

    <string name="register">SignUp</string>
    <string-array name="usertype">
        <item>ShopKeeper</item>
        <item>Customer</item>
        <item>Ministry</item>
    </string-array>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>

    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string-array name="month">
        <item>Jannuary</item>
        <item>Fab</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>june</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>Octuber</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="distype">
        <!--        <item>video</item>-->
        <item>item_picture</item>
    </string-array>


    <string name="title_activity_maps">Map</string>

    <string name="title_activity_on_location_view">Map</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_delete">Delete</string>

    <string name="nav_header_title">Android Studio</string>

    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>